assets/sass/_extra.scss
/* ... */
.new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
  font-family: "Font Awesome 6 Pro";
  content: "\f078";
  font-weight: 400;
  font-size: 11px;
  position: relative;
  top: -1px;
}
/* Adventure Dining */

body.page-id-292 #banner .static-banner .image-wrapper,
body.single-dining #hero--single figure {
  padding-bottom: 48vw;
  position: relative;
}
body.page-id-292 #banner .static-banner .image-wrapper img.desktop,
body.single-dining #hero--single figure img.desktop {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

@media screen and (max-width: 768px) {
  body.page-id-292 #banner .static-banner .image-wrapper,
  body.single-dining #hero--single figure {
    padding-bottom: 60vw;
  }
  
  body.page-id-292 #banner .static-banner .image-wrapper img.mobile-feat-image,
  body.single-dining #hero--single figure img.mobile-feat-image {
  display: block;
  position: absolute!important;
  top: 0;
  left: 0;
  width: 100%!important;
  height: 100%!important;
  object-fit: cover;
  object-position: center;
  }
  #hero--single .banner-bottom {
    bottom: -1px;
  }
  .site-header-mobile .mobileMenuToggle {
    top: 0!important;
  }
  .site-header-mobile .site-logo-mobile {
    top: 2px!important;
  }
}

.site-header .navbar .right .navlink-today.today:after,
.site-header .new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
  content: "";
  position: relative;
  top: -2px;
  right: -8px;
  display: inline-block;
  width: 5px;
  height: 9px;
  border-right: 1px solid #000;
  border-bottom: 1px solid #000;
  transform: rotate(45deg) scale(0.75);
}

body.home {
  .site-header .navbar .right .navlink-today.today:after,
  .site-header .new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
    border-right-color: #FFF;
    border-bottom-color: #FFF;
  }
  .site-header .navbar .right .navlink-today.today:hover:after,
  .site-header .navbar .right .navlink-today.today:focus:after,
  .site-header .navbar .right .navlink-today.today:focus-within:after,
  .site-header.mouseover .navbar .right .navlink-today.today:after,
  .site-header.mouseover .new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
    border-right-color: #000;
    border-bottom-color: #000;
  }
  &.scrolled {
    .site-header .navbar .right .navlink-today.today:after,
    .site-header .new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
      border-right-color: #000;
      border-bottom-color: #000;
    }
  }
}

.homepage-hero:has(video) {
  overflow: hidden;
  &:before {
    content:"";
    display: block;
    position: absolute;
    top: -5%;
    left: 0;
    width: 100%;
    height: 60%;
    background: linear-gradient(to bottom,  rgba(0,0,0,0.88) 0%,rgba(0,0,0,0) 100%);
    z-index: 50;
    filter: blur(20px);
    pointer-events: none;
    transform: scale(1.3);
  }
  video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: auto;
  }
  .desktop {
    display: none;
  }
  @include tab {
    .desktop {
      display: block;
    }
    .mobile {
      display: none;
    }
  }
}

/* Tribe Calendar */
.hours-of-operation-mobile {
  padding-bottom: 20px!important;
  p {
    margin: 10px 0!important;
  }
}
.calendar-grid-wrapper .tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-month__multiday-event-wrapper {
  height: auto !important;
  min-height: 10px;
}
// .tribe-events-view--shortcode {
//   .tribe-events-calendar-month__events:has(.tribe-events-calendar-month__multiday-event-wrapper) {
//     article.hentry {
//       margin-top: 18px!important;
//       position: relative;
//       z-index: 50;
//     }
//     .tribe-events-calendar-month__multiday-event-wrapper {
//       article.hentry {
//         margin-top: 12px!important;
//         z-index: 2;
//       }
//     }
//   }
// }

